[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -35.0
margin_right = 82.0
margin_bottom = 35.0
__meta__ = {
"_edit_lock_": true
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 164.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -542, -46 )
focus_neighbour_top = NodePath("../QuitButton")
text = "Start"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 164.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( -542, -46 )
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
